helm-chart/app-deployment-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-web2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-web2
  template:
    metadata:
      labels:
        app: flask-web2
    spec:
      containers:
      - name: flask-web2
        image: kannanc70/my-flask-2:latest
        ports:
        - containerPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: flask-web2
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: flask-web2
