helm-chart/service2.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-controller
  namespace: "nginx-ingress-controller"
  labels:
    app.kubernetes.io/name: nginx-ingress-controller
    helm.sh/chart: nginx-ingress-controller-7.4.8
    app.kubernetes.io/instance: nginx-ingress-controller
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: nginx-ingress-controller
    app.kubernetes.io/instance: nginx-ingress-controller
    app.kubernetes.io/component: controller
